[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/New Piskel.png" type="Texture" id=1]
[ext_resource path="res://inimigos/scripts/enemy_0.gd" type="Script" id=2]
[ext_resource path="res://sprites/light.png" type="Texture" id=3]
[ext_resource path="res://sons/morte_2.ogg" type="AudioStream" id=4]
[ext_resource path="res://sons/morte_1.ogg" type="AudioStream" id=5]
[ext_resource path="res://sons/morte.ogg" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.5, 5 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 7.0

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( -2, -4, 5, -4, 5, 6, -3, 6, -3, -4 )

[node name="enemy_0" type="KinematicBody2D" groups=["enemy"]]
position = Vector2( 75, 35 )
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 1 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 2 )
shape = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1, -1.5 )
scale = Vector2( 0.2, 0.15 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -5.5, 5.5 )
scale = Vector2( 0.0334821, 0.0111607 )
texture = ExtResource( 3 )
texture_scale = 0.35
energy = 2.0
shadow_enabled = true
shadow_item_cull_mask = 3

[node name="Light2D2" type="Light2D" parent="."]
position = Vector2( 5.5, 3.5 )
scale = Vector2( 0.0334821, 0.0334821 )
texture = ExtResource( 3 )
texture_scale = 0.35
energy = 2.0
shadow_enabled = true
shadow_item_cull_mask = 3

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 5 )

[node name="lightHited" type="Light2D" parent="."]
texture = ExtResource( 3 )
texture_scale = 0.12
energy = 0.0
shadow_enabled = true
shadow_item_cull_mask = 3

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
